<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_DisplayPositions" Id="{542e3d8f-0d50-4d8f-9514-84d4473ce3b6}">
    <Declaration><![CDATA[TYPE ST_DisplayPositions :
STRUCT
	target		:	STRING;
	description	:	STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>